--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="output-container flex-space">
         <div>
           <p>Total des dépenses</p>
-          <span id="amount">0</span>
+          <span id="amounts">0</span>
         </div>
         <div>
           <p>Dépense</p>
