--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p class="hide error" id="product-title-error">
             les champs ne doit pas être vide
           </p>
-          
+
           <input type="text" id="nameExpense" name="name" placeholder="Entrer un nom de dépense" />
           <input type="number" id="amount" name="amount" placeholder="Entrer un montant €" />
           <input type="text" id="person" name="person" placeholder="Entrer un nom de personne" />
@@ -55,7 +55,7 @@
           <span id="expenditure-value">0</span>
         </div>
         <div>
-          <p>Balance</p>
+          <p>X</p>
           <span id="balance-amount">0</span>
         </div>
       </div>
@@ -66,7 +66,11 @@
     <div class="list">
       <h3>Liste de dépense :</h3>
       <div class="list-container" id="list">
-
+      </div>
+      <div id="expenses">
+        <p class="nameExp"></p>
+        <p class="amount"> €</p>
+        <p class="personName"></p>
       </div>
     </div>
   </div>
